# demo_ROS2_Topic_Cpp-Python.

./: README.md
image/: wood-boards-transparent-background_1275576-20772.avif
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/: default_config.json
src/cpp_custom/: CMakeLists.txt
src/cpp_custom/engine/: Engine.cpp  Engine.hpp  Setup.hpp  StoreData.cpp  StoreData.hpp  main.cpp
src/cpp_custom/src/: Engine.cpp  Engine.hpp  Makefile  Setup.cpp  SetupBarEngine.cpp  SetupBarEngine.hpp  WoodBar_Python.cpp  WoodBar_Python.hpp  main.cpp  main1.cpp  my_program  ros.cpp
src/cpp_custom/src/communication/: ros_Service.cpp
src/cpp_custom/src/dataBase/: StoreData.cpp  StoreData.hpp
src/cpp_custom/src/demo/database/: DataBase.cpp  DataBase.hpp
src/cpp_custom/src/demo/engine/: Engine.cpp  Engine.hpp
src/cpp_custom/src/demo/setup/: Setup.hpp
src/cpp_custom/src/demo/statemachine/: StateMachine.cpp  Statemachine.hpp
src/cpp_custom/src/enigne/: Engine.cpp
src/cpp_custom/src/setup/: Setup.cpp
src/cpp_custom/src/stateMachine/: StateMachine.cpp  Statemachine.hpp
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/demo/: demo
src/demo/communication/: ros_Service.hpp  serial_UART.cpp  serial_UART.hpp
src/demo/enigne/: Engine.hpp
src/demo/setup/: Setup.hpp
src/py_pubsub/: package.xml  setup.py
src/python_custom/: setup.cfg  setup.py
src/python_custom/python_custom/: camera_handler.py  image_processor.py  main.py  ros_manager.py  (+1 more)
src/ros_interface/: CMakeLists.txt  package.xml
temp/engine/: process_engine.py
temp/nodes/: ros_interface.py
temp/update/: config_manager.py
temp/utils/: Util.py  setup.py  trackBar.py
(+87 files in other folders)
